[package]
name = "dasp-benches"
version = "0.1.0"
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dasp = { git = "https://github.com/RustAudio/dasp", branch = "master", features = ["all"] }
